tests/rustdoc-ui/issues/issue-61732.stderr
error[E0433]: failed to resolve: you might be missing crate `r#mod`
  --> $DIR/issue-61732.rs:3:15
   |
LL | pub(in crate::r#mod) fn main() {}
   |               ^^^^^ you might be missing crate `r#mod`
   |
   = help: consider adding `extern crate r#mod` to use the `r#mod` crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
